--- a/index.html
+++ b/index.html
@@ -55,8 +55,18 @@
             <div id="matrix-view" class="view hidden">
                 </div>
         </div>
-    </div>
 
-    <script src="script.js"></script>
+        <div class="graph-properties">
+            <h3>Live Graph Properties</h3>
+            <ul>
+                <li><strong>Vertex Count:</strong> <span id="prop-vertices">0</span></li>
+                <li><strong>Edge Count:</strong> <span id="prop-edges">0</span></li>
+                <li><strong>Graph Density:</strong> <span id="prop-density">N/A</span></li>
+                <li><strong>Source Nodes (In-Degree 0):</strong> <span id="prop-source-nodes">N/A</span></li>
+                <li><strong>Sink Nodes (Out-Degree 0):</strong> <span id="prop-sink-nodes">N/A</span></li>
+            </ul>
+        </div>
+
+    </div> <script src="script.js"></script>
 </body>
 </html>
